[package]
name = "case_convert"
version = "0.1.0"
edition = "2021"
description = "git remote add origin git@github.com:nicolasbauw/case-convert.git"
keywords = ["case", "conversion", "string"]
license = "MIT"
repository = "https://github.com:nicolasbauw/case-convert"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
